# TabRAG

./: .gitignore  CHANGELOG.md  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/pages/: chat.py  knowledge_dashboard.py  settings.py
src/utils/: elastic.py  embedding.py  milvus.py  parsing.py  qdrant.py
